--- a/log4j2-vulnerabilities/pom.xml
+++ b/log4j2-vulnerabilities/pom.xml
@@ -11,13 +11,8 @@
 
     <artifactId>log4j2-vulnerabilities</artifactId>
 
-    <properties>
-        <log4j2.version>2.14.1</log4j2.version>
-        <!-- 官方修复版本 -->
-        <!--<log4j2.version>2.16.0</log4j2.version>-->
-    </properties>
-
     <dependencies>
+        <!--log4j2相关依赖-->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
